Proteção contra venda duplicada/estoque negativo
Signed-off-by: Erinaldo Henrique <hencomjesus@hotmail.com>